--- a/Java/TPProyectoAlumnos/TP_ProyectoAlumnos/nbproject/project.properties
+++ b/Java/TPProyectoAlumnos/TP_ProyectoAlumnos/nbproject/project.properties
@@ -29,11 +29,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.PaqueteLectura.jar=C:\\Users\\valen\\OneDrive\\Desktop\\UNIVERSIDAD\\TALLER\\Java\\PaqueteLectura.jar
 file.reference.PaqueteLectura.jar-1=G:\\Otros ordenadores\\My computer\\UNIVERSIDAD\\TALLER\\Java\\PaqueteLectura.jar
+file.reference.PaqueteLectura.jar-2=..\\..\\PaqueteLectura.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.PaqueteLectura.jar}:\
-    ${file.reference.PaqueteLectura.jar-1}
+    ${file.reference.PaqueteLectura.jar-1}:\
+    ${file.reference.PaqueteLectura.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
