parcial y ultimo ejer prac 5

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 /Java/ejer1Prac5/nbproject/private/
 /Java/ejer1Prac5/build/
+/Java/prac2prac5/nbproject/private/
+/Java/prac2prac5/build/
+/Java/ejer3prac5/nbproject/private/
+/Java/ejer3prac5/build/
+/Java/ejer4prac5/nbproject/private/
+/Java/ejer4prac5/build/
+/Java/parcial1/nbproject/private/
+/Java/parcial1/build/
