nuevo modulo COCURRENTE

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,21 @@
 /Java/ejer4prac5/build/
 /Java/parcial1/nbproject/private/
 /Java/parcial1/build/
+/Java/parcial2/nbproject/private/
+/Java/parcial2/build/
+/Java/parcial3/nbproject/private/
+/Java/parcial3/build/
+/Java/Parcial4/nbproject/private/
+/Java/Parcial4/build/
+/Java/parcial5/nbproject/private/
+/Java/parcial5/build/
+/Java/Parcial6/nbproject/private/
+/Java/Parcial6/build/
+/Java/Parcial7/nbproject/private/
+/Java/Parcial7/build/
+/Java/Parcial8/nbproject/private/
+/Java/Parcial8/build/
+/Java/ParcialesRandom/nbproject/private/
+/Java/ParcialesRandom/build/
+/Java/Parcial9/nbproject/private/
+/Java/Parcial9/build/
